--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
 	    <tomcat.ip>127.0.0.1</tomcat.ip>
 	    <file>readme</file>
 		<lombok.version>1.18.10</lombok.version>
+		<spring-security-oauth2.version>2.5.2.RELEASE</spring-security-oauth2.version>
+		<spring-security-jwt.version>1.1.1.RELEASE</spring-security-jwt.version>
 	</properties>
 
 	<dependencies>
@@ -64,18 +66,17 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-jwt</artifactId>
-			<version>1.0.7.RELEASE</version>
+			<version>${spring-security-jwt.version}</version>
 		</dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
-            <version>2.1.0.RELEASE</version>
+            <version>${spring-security-oauth2.version}</version>
         </dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.10.8</version>
 		</dependency>
 
 		<dependency>
