--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:8-alpine
+FROM eclipse-temurin:17-jdk-alpine
 ADD maven/springboot-jwt-0.0.1-SNAPSHOT.jar app.jar
 #RUN sh -c 'touch /app.jar'
 ENV JAVA_OPTS=""
