--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,10 @@
 			<version>${lombok.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
+		</dependency>
 
 	</dependencies>
 	<build>
