--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
+			<version>0.4.2</version>
 		</dependency>
 
 	</dependencies>
