--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
 	         <plugin>
 		        <groupId>io.fabric8</groupId>
 		        <artifactId>docker-maven-plugin</artifactId>
+		        <version>0.39.0</version>
 		        <extensions>true</extensions>
 		        
  		        <configuration>
