--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 	    <tomcat.ip>127.0.0.1</tomcat.ip>
 	    <file>readme</file>
 		<lombok.version>1.18.10</lombok.version>
+		<maven.compiler.plugin.updatePolicy>always</maven.compiler.plugin.updatePolicy>
 	</properties>
 
 	<dependencies>
@@ -148,7 +149,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.11.1</version>
 				<configuration>
 					<source>17</source>
 					<target>17</target>
