--- a/pom.xml
+++ b/pom.xml
@@ -14,18 +14,25 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.4.RELEASE</version>
+		<version>2.7.14</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
+		<java.version>17</java.version>
 		<tomcat.port>9081</tomcat.port>
 	    <tomcat.ip>127.0.0.1</tomcat.ip>
 	    <file>readme</file>
-		<lombok.version>1.18.10</lombok.version>
+		<lombok.version>1.18.30</lombok.version>
+		<spring-security-jwt.version>1.1.1</spring-security-jwt.version>
+		<spring-security-oauth2.version>2.5.2.RELEASE</spring-security-oauth2.version>
+		<jackson.version>2.15.2</jackson.version>
+		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+		<docker-maven-plugin.version>0.43.0</docker-maven-plugin.version>
+
+
 	</properties>
 
 	<dependencies>
@@ -64,18 +71,18 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-jwt</artifactId>
-			<version>1.0.7.RELEASE</version>
+			<version>${spring-security-jwt.version}</version>
 		</dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
-            <version>2.1.0.RELEASE</version>
+            <version>${spring-security-oauth2.version}</version>
         </dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.10.8</version>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<dependency>
@@ -103,12 +110,13 @@
                     </execution>
                 </executions>
 			</plugin>
-			
+
 	         <plugin>
 		        <groupId>io.fabric8</groupId>
 		        <artifactId>docker-maven-plugin</artifactId>
+		        <version>${docker-maven-plugin.version}</version>
 		        <extensions>true</extensions>
-		        
+
  		        <configuration>
 		          <images>
 			            <image>
@@ -123,10 +131,10 @@
 			              </build>
 			              <run>
 			              	<namingStrategy>alias</namingStrategy>
-			                <ports> 
+			                <ports>
 			                  <port>${tomcat.port}:8080</port>
 			                </ports>
-					         <wait> 
+					         <wait>
 					           <http>
 					              <url>http://${tomcat.ip}:${tomcat.port}/actuator/health</url>
 					           </http>
@@ -135,17 +143,17 @@
 			              </run>
 			            </image>
 		          </images>
-		        </configuration>	
-		        	
+		        </configuration>
+
 		      </plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
