--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.2.5.Final</version>
+		</dependency>
 
 	</dependencies>
 	<build>
