--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
 			<version>5.9.3</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-jose</artifactId>
+			<version>5.7.5</version>
+		</dependency>
 
 	</dependencies>
 	<build>
