--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,17 @@
 			<artifactId>spring-security-oauth2-jose</artifactId>
 			<version>5.7.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+			<version>2.7.14</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework.security.oauth.boot</groupId>
+    		<artifactId>spring-security-oauth2-autoconfigure</artifactId>
+    		<version>2.7.6</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
